--- a/app/views/admin/admin/competency.html.erb
+++ b/app/views/admin/admin/competency.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Admin#competency</h1>
-<p>Find me in app/views/admin/admin/competency.html.erb</p>
+<% provide(:title, "competency management") %>
+<% provide(:page_title, "Competency Management") %>
+<% provide(:page_sub_title, "manage competency models") %>
+<% provide(:page_icon, "iconfa-sitemap") %>
+
+<% content_for :breadcrumbs do %>
+<%= content_tag(:li, "Competency Management") %>
+<% end %>
+
+<% content_for :javascript do %>
+<script type="text/javascript">
+</script>
+<% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h3 class="subtitle">Competency Model</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"><span class="iconfa-home"></span> Competency Summary</h4>
+    <div class="widgetcontent nopadding">
+      competency model for user.
+    </div>
+  </div>
+  <div id="dashboard-right" class="span4">
+    <h4 class="widgettitle"> Side Content</h4>
+    <div class="widgetcontent">
+      Side content
+    </div>
+  </div>
+</div> <!--row-fluid-->
