--- a/app/views/admin/admin/position.html.erb
+++ b/app/views/admin/admin/position.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Admin#position</h1>
+<% provide(:title, "positions management") %>
+<% provide(:page_title, "Positions Management") %>
+<% provide(:page_sub_title, "manage company positions") %>
+<% provide(:page_icon, "iconfa-map-marker") %>
+
+<% content_for :breadcrumbs do %>
+<%= content_tag(:li, "Positions Management") %>
+<% end %>
+
+<% content_for :javascript do %>
+<script type="text/javascript">
+</script>
+<% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h3 class="subtitle">Competency Model</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"><span class="iconfa-home"></span> Competency Summary</h4>
+    <div class="widgetcontent nopadding">
+      competency model for user.
+    </div>
+  </div>
+  <div id="dashboard-right" class="span4">
+    <h4 class="widgettitle"> Side Content</h4>
+    <div class="widgetcontent">
+      Side content
+    </div>
+  </div>
+</div> <!--row-fluid--><h1>Admin::Admin#position</h1>
 <p>Find me in app/views/admin/admin/position.html.erb</p>
