--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -310,6 +310,8 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 		  background: none; border: 0; border-left: 1px solid rgba(255,255,255,0.2); color: #fff; padding: 11px 20px; }
 .headtitle .dropdown-menu { left: auto; right: 0; }
 .headtitle .btn-group .btn .caret { border-top: 4px solid #fff; }
+.headtitle a { color: #fff; }
+.headtitle a:hover { text-decoration: underline; cursor: pointer; }
 
 .widgetbox .headtitle { margin-bottom: 0; }
 
