--- a/app/views/admin/admin/user.html.erb
+++ b/app/views/admin/admin/user.html.erb
@@ -14,13 +14,47 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle">Competency Model</h3>
+    <h3 class="subtitle">All Users</h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><span class="iconfa-home"></span> Competency Summary</h4>
-    <div class="widgetcontent nopadding">
-      competency model for user.
+    <div class="widgetbox">
+      <div class="headtitle">
+        <h4 class="widgettitle"><span class="iconfa-group"></span> All Users</h4>
+      </div>
+      <table class="table table-bordered responsive">
+        <thead>
+          <tr>
+            <th class="center">Name</th>
+            <th class="center">Staff ID</th>
+            <th class="center">Email</th>
+            <th class="center">Telephone</th>
+            <th class="center">Mobile Phone</th>
+            <th class="center">Manager</th>
+            <th class="center">Department</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |u| %>
+          <tr>
+            <td class="center"><%= u.name %></td>
+            <td class="center"><%= u.staff_id %></td>
+            <td class="center"><%= u.email %></td>
+            <td class="center"><%= u.phone_num %></td>
+            <td class="center"><%= u.mobile_phone %></td>
+            <td class="center"><%= u.manager.name %></td>
+            <td class="center"><%= u.department %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
-  </div>
+
+    <h3 class="subtitle">Manage Users</h3>
+    <div class="well">
+      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New User</a>
+      <a href="<%= import_users_path %>" class="btn btn-primary"><i class="iconfa-file icon-white"></i> Import User</a>
+      <a href="<%= import_users_path %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export CSV</a>
+    </div>
+</div>
   <div id="dashboard-right" class="span4">
     <h4 class="widgettitle"> Side Content</h4>
     <div class="widgetcontent">
