Adjust form for create new user.

--- a/app/assets/stylesheets/jquery.ui.css.erb
+++ b/app/assets/stylesheets/jquery.ui.css.erb
@@ -19,8 +19,8 @@
 .ui-datepicker-calendar thead td:first-child { border-left-color: #333; }
 .ui-datepicker-prev, .ui-datepicker-next { display: inline-block; width: 14px; height: 14px; }
 .ui-datepicker-prev span, .ui-datepicker-next span { display: none; }
-.ui-datepicker-prev { cursor: pointer; position: absolute; top: 8px; left: 5px; background: url(../images/calarrow.png) no-repeat 3px -39px; }
-.ui-datepicker-next { cursor: pointer; position: absolute; top: 8px; right: 5px; background: url(../images/calarrow.png) no-repeat 3px 1px; }
+.ui-datepicker-prev { cursor: pointer; position: absolute; top: 8px; left: 5px; background: url(<%= asset_data_uri 'calarrow.png' %>) no-repeat 3px -39px; }
+.ui-datepicker-next { cursor: pointer; position: absolute; top: 8px; right: 5px; background: url(<%= asset_data_uri 'calarrow.png' %>) no-repeat 3px 1px; }
 
 .ui-datepicker-inline { padding: 0; background: #fff; border: 0 !important; }
 .ui-datepicker-inline .ui-datepicker-calendar { width: 100%; border: 0; }
