--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -9,14 +9,15 @@
 
 <% content_for :javascript do %>
 <script type="text/javascript">
-  $(function() {
-    $('.accordion').accordion({
-        collapsible: true,
-        active: false,
-        heightStyle: "content",
-        header: ".a-header"
-    });
+$(function() {
+  $('#datepicker').datepicker();
+  $('.accordion').accordion({
+      collapsible: true,
+      active: false,
+      heightStyle: "content",
+      header: ".a-header"
   });
+});
 </script>
 <% end %>
 
@@ -26,28 +27,28 @@
     <ul class="shortcuts">
       <li class="events">
         <a href="<%= admin_manage_users_path %>">
-          <span class="counter"><%= @users.size %></span>
+          <span class="counter"><%= @users_count %></span>
           <span class="shortcuts-icon iconfa-group"></span>
           <span class="shortcuts-label">Users</span>
         </a>
       </li>
       <li class="events">
         <a href="<%= admin_manage_competency_path %>">
-          <span class="counter"><%= @competencies.size %></span>
+          <span class="counter"><%= @competencies_count %></span>
           <span class="shortcuts-icon iconfa-sitemap"></span>
           <span class="shortcuts-label">Competencies</span>
         </a>
       </li>
       <li class="events">
         <a href="<%= admin_manage_course_path %>">
-          <span class="counter"><%= @courses.size %></span>
+          <span class="counter"><%= @courses_count %></span>
           <span class="shortcuts-icon iconfa-folder-open"></span>
           <span class="shortcuts-label">Courses</span>
         </a>
       </li>
       <li class="events">
         <a href="<%= admin_manage_position_path %>">
-          <span class="counter"><%= @positions.size %></span>
+          <span class="counter"><%= @positions_count %></span>
           <span class="shortcuts-icon iconfa-reorder"></span>
           <span class="shortcuts-label">Positions</span>
         </a>
@@ -60,7 +61,7 @@
 
     <div class="widgetbox">
       <div class="headtitle">
-        <h4 class="widgettitle"><span class="iconfa-sitemap"></span> Competency Models <span class="pull-right"><%= link_to "see all &#8594;".html_safe, admin_manage_competency_path %></span></h4>
+        <h4 class="widgettitle"><span class="iconfa-sitemap"></span> Latest Added Competency Models <span class="pull-right"><%= link_to "see all &#8594;".html_safe, admin_manage_competency_path %></span></h4>
       </div>
       <% if @competencies.size == 0 %>
       <div class="widgetcontent">
@@ -92,12 +93,84 @@
       </div>
       <% end %>
     </div>
+    <div class="divider15"></div>
+
+    <h3 class="subtitle">Users</h3>
+    <div class="divider15"></div>
+    <div class="widgetbox">
+      <div class="headtitle">
+        <h4 class="widgettitle"><span class="iconfa-group"></span> Latest Added Users <span class="pull-right"><%= link_to "see all &#8594;".html_safe, admin_manage_users_path %></span></h4>
+      </div>
+      <% if @users.size == 0 %>
+      <div class="widgetcontent">
+        <p>No user setup yet. please setup it first. </p>
+      </div>
+      <% else %>
+      <table class="table table-bordered responsive">
+        <thead>
+          <tr>
+            <th class="center">Name</th>
+            <th class="center">Staff ID</th>
+            <th class="center">Email</th>
+            <th class="center">Telephone</th>
+            <th class="center">Mobile Phone</th>
+            <th class="center">Manager</th>
+            <th class="center">Department</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |u| %>
+          <tr>
+            <td class="center"><%= u.name %></td>
+            <td class="center"><%= u.staff_id %></td>
+            <td class="center"><%= u.email %></td>
+            <td class="center"><%= u.phone_num %></td>
+            <td class="center"><%= u.mobile_phone %></td>
+            <td class="center"><%= u.manager.name %></td>
+            <td class="center"><%= u.department %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <% end %>
+    </div>
+
+    <div class="divider15"></div>
+
+    <h3 class="subtitle">Courses</h3>
+    <div class="divider15"></div>
+    <div class="widgetbox">
+      <div class="headtitle">
+        <h4 class="widgettitle"><span class="iconfa-group"></span> Latest Added Course <span class="pull-right"><%= link_to "see all &#8594;".html_safe, admin_manage_course_path %></span></h4>
+      </div>
+      <% if @courses.size == 0 %>
+      <div class="widgetcontent">
+        <p>No user setup yet. please setup it first. </p>
+      </div>
+      <% else %>
+      <div class="widgetcontent nopadding">
+        <ul class="courselist">
+          <% @courses.each do |c| %>
+          <li>
+            <%= image_tag course_cover_path(c, :normal), :class => "pull-left" %>
+            <div class="course-info">
+              <h4><%= link_to c.name, course_path(c) %></h4>
+            </div>
+          </li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+    </div>
 
   </div> <!--span8-->
   <div id="dashboard-right" class="span4">
-    <h4 class="widgettitle"> Side Content</h4>
-    <div class="widgetcontent">
-      Side content
+    <h3 class="subtitle">Calender</h3>
+    <div class="divider15"></div>
+
+    <h4 class="widgettitle"> Calender</h4>
+    <div class="widgetcontent nopadding">
+      <div id="datepicker"></div>
     </div>
   </div>
 </div> <!--row-fluid-->
