--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,12 @@
 <% provide(:title, 'create user') %>
 <% provide(:page_title, "Create User") %>
-<% provide(:page_sub_title, "Dashboard") %>
-<% provide(:page_icon, "iconfa-home") %>
+<% provide(:page_sub_title, "New User") %>
+<% provide(:page_icon, "iconfa-user") %>
+
+<% content_for :breadcrumbs do %>
+<li><%= link_to " Users Managerment ", admin_manage_users_path %> <span class="separator"></span></li>
+<%= content_tag(:li, "Create User") %>
+<% end %>
 
 <% content_for :javascript do %>
 <script type="text/javascript">
@@ -18,9 +23,19 @@
       <%= simple_form_for(@user, :html => {:class => 'form-horizontal', :multipart => true }) do |f| %>
         <%= f.input :name %>
         <%= f.input :email %>
-        <%= f.input :position_id %>
         <%= f.input :password, hint: 'No special characters.'%>
         <%= f.input :password_confirmation %>
+        <%= f.association :position, label_method: :name, value_method: :id, include_blank: false %>
+        <%= f.association :manager, collection: User.staff, label_method: :name, value_method: :id %>
+        <%= f.input :department %>
+        <%= f.input :department_level %>
+        <%= f.input :staff_id %>
+        <%= f.input :joined_at, as: :date, start_year: Date.today.year - 90,
+                              end_year: Date.today.year - 12,
+                              order: [:year, :month, :day] %>
+        <%= f.input :birthday, as: :date, start_year: Date.today.year - 90,
+                              end_year: Date.today.year - 12,
+                              order: [:year, :month, :day] %>
         <div class="control-group file optional">
           <label class="file optional control-label" for="user_avatar">Avatar</label>
           <div class="controls">
