Add competency export csv
Signed-off-by: long li <hutuxiansheng@gmail.com>

--- a/app/views/competencies/index.html.erb
+++ b/app/views/competencies/index.html.erb
@@ -1,7 +1,7 @@
 <p>
   Download:
-  <%= link_to "CSV", competencies_path(format: "csv") %> |
-  <%= link_to "Excel", competencies_path(format: "xls") %>
+  <%= link_to "CSV", export_competencies_path(format: "csv") %> |
+  <%= link_to "Excel", export_competencies_path(format: "xls") %>
 </p>
 
 <table id="competencies">
