Implement home page for user.

--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -264,7 +264,7 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .courselist { list-style: none; clear: both; }
 .courselist li { display: block; border-bottom: 1px solid #ddd; padding: 15px; }
 .courselist li img { display: block; width: 200px; }
-.courselist li .course-info { margin-left: 220px; }
+.courselist li .course-info { margin-left: 220px; min-height: 150px;}
 .courselist li p:last-child { margin-bottom: 0; }
 .courselist li .btn { margin-right: 3px; }
 .courselist li .btn span { margin-right: 5px; }
@@ -276,8 +276,8 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .userlist li { display: block; border-bottom: 1px solid #ddd; padding: 10px; cursor: pointer; }
 .userlist li:hover { background-color: #f7f7f7; }
 .userlist li:last-child { border-bottom: 0; }
-.userlist li .uinfo { margin-left: 60px; }
-.userlist li img { display:  block; width: 50px; }
+.userlist li .uinfo { margin-left: 70px; }
+.userlist li img { display:  block; width: 60px; }
 .userlist li .uinfo h5 { font-size: 14px; color: #0866c6; margin-bottom: 2px; }
 .userlist li .uinfo span { display:  block; font-size: 11px; line-height: 16px; color: #999; }
 .userlist li .uinfo span.pos { text-transform: uppercase; color: #666; }
