--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
           <li><a href=""><span class="iconfa-envelope"></span> New message from <strong>Jane</strong> <small class="muted"> - 3 days ago</small></a></li>
           <li><a href=""><span class="iconfa-envelope"></span> New message from <strong>Tanya</strong> <small class="muted"> - 1 week ago</small></a></li>
           <li><a href=""><span class="iconfa-envelope"></span> New message from <strong>Lee</strong> <small class="muted"> - 1 week ago</small></a></li>
-          <li class="viewmore"><a href="messages.html">View More Messages</a></li>
+          <li class="viewmore"><a href="#">View More Messages</a></li>
         </ul>
       </li>
       <li class="right">
@@ -26,7 +26,7 @@
           <div class="userinfo">
             <h5><%= current_user.name %> <small>- <%= current_user.email %></small></h5>
             <ul>
-              <li><a href="editprofile.html">Edit Profile</a></li>
+              <li><a href="">Edit Profile</a></li>
               <li><a href="">Account Settings</a></li>
               <li><%= link_to "Sign out", logout_path %></li>
             </ul>
