--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, @user.name) %>
 <% provide(:page_title, "User Profile") %>
 <% provide(:page_sub_title, "Dashboard") %>
-<% provide(:page_icon, "iconfa-plus") %>
+<% provide(:page_icon, "iconfa-user") %>
 
 <% content_for :breadcrumbs do %>
 <%= content_tag(:li, "User Profile") %>
