--- a/app/views/competencies/index.html.erb
+++ b/app/views/competencies/index.html.erb
@@ -1,6 +1,6 @@
 <p>
   Download:
-  <%= link_to "CSV", competencies_path(format: "csv") %> |
+  <%= link_to "CSV", export_competencies_path(format: "csv") %> |
   <%= link_to "Excel", competencies_path(format: "xls") %>
 </p>
 
