Add export  course/position/user
Signed-off-by: long li <hutuxiansheng@gmail.com>

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <p>
   Download:
-  <%= link_to "CSV", courses_path(format: "csv") %> |
-  <%= link_to "Excel", courses_path(format: "xls") %>
+  <%= link_to "CSV", export_courses_path(format: "csv") %> |
+  <%= link_to "Excel", export_courses_path(format: "xls") %>
 </p>
 
 <table id="competencies">
