--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,7 +1,7 @@
 <p>
   Download:
-  <%= link_to "CSV", positions_path(format: "csv") %> |
-  <%= link_to "Excel", positions_path(format: "xls") %>
+  <%= link_to "CSV", export_positions_path(format: "csv") %> |
+  <%= link_to "Excel", export_positions_path(format: "xls") %>
 </p>
 
 <table id="competencies">
