--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <p>
   Download:
-  <%= link_to "CSV", users_path(format: "csv") %> |
-  <%= link_to "Excel", users_path(format: "xls") %>
+  <%= link_to "CSV", export_users_path(format: "csv") %> |
+  <%= link_to "Excel", export_users_path(format: "xls") %>
 </p>
 
 <table id="users">
