--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,29 +1,61 @@
-<p>
-  Download:
-  <%= link_to "CSV", export_courses_path(format: "csv") %> |
-  <%= link_to "Excel", export_courses_path(format: "xls") %>
-</p>
+<% provide(:title, "courses library") %>
+<% provide(:page_title, "Courses Library") %>
+<% provide(:page_sub_title, "all courses") %>
+<% provide(:page_icon, "iconfa-folder-open") %>
 
-<table id="competencies">
-  <tr>
-    <th>&nbsp;title &nbsp;&nbsp;&nbsp;</th>
-    <th>&nbsp;&nbsp;&nbsp; author &nbsp;&nbsp;&nbsp;</th>
-    <th>&nbsp;&nbsp;&nbsp; ID &nbsp;&nbsp;&nbsp;</th>
-    <th>&nbsp;&nbsp;&nbsp; ID &nbsp;&nbsp;&nbsp;&nbsp;</th>
-  </tr>
-  <% @courses.each do |mcourse| %>
-    <tr>
-      <td>    <%= mcourse.title   %>    </td>
-      <td><%=  mcourse.author    %></td>
-      <td><%=  mcourse.id    %></td>
-      <td><%= mcourse.id    %></td>
-    </tr>
-  <% end %>
-</table>
-
-<h2>Import Products</h2>
-
-<%= form_tag import_courses_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
+<% content_for :breadcrumbs do %>
+<li>Courses Library</li>
 <% end %>
+
+<% content_for :javascript do %>
+<script type="text/javascript">
+</script>
+<% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h3 class="subtitle">Courses</h3>
+    <div class="divider15"></div>
+    <div class="widgetbox">
+      <div class="headtitle">
+        <h4 class="widgettitle"><span class="iconfa-folder-open"></span> Courses</h4>
+      </div>
+      <% if @courses.size == 0 %>
+      <div class="widgetcontent">
+        <p>No Competency Model setup yet. please setup it first. </p>
+      </div>
+      <% else %>
+      <div class="widgetcontent nopadding">
+        <ul class="courselist">
+          <% @courses.each do |c| %>
+          <li>
+            <%= image_tag course_cover_path(c, :normal), :class => "pull-left" %>
+            <div class="course-info">
+              <h4><%= link_to c.title, course_path(c) %></h4>
+              <h6>created by <%= link_to c.teacher.name, user_path(c.teacher) %> at <%= distance_of_time_in_words_to_now(c.created_at) + ' ago' %></h6>
+              <p><%= c.description %></p>
+              <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> View Details</a>
+            </div>
+          </li>
+          <% end %>
+        </ul>
+        <div class="page-wrapper"><%= paginate @courses %></div>
+      </div>
+      <% end %>
+    </div>
+
+    <div class="well">
+      <a href="<%= new_course_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New Course</a>
+      <a href="<%= export_courses_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
+    </div>
+  
+  </div>
+
+  <div id="dashboard-right" class="span4">
+    <h3 class="subtitle">Manage Courses</h3>
+    <div class="divider15"></div>
+    <h4 class="widgettitle"> Import Courses</h4>
+    <div class="widgetcontent">
+    </div>
+  </div>
+</div> <!--row-fluid-->
