--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -129,7 +129,7 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .viewmore a { font-size: 11px; text-transform: uppercase; font-size: 11px !important; }
 
 .newusers { min-width: 200px; }
-.newusers li a:hover { background; #eee; }
+.newusers li a:hover { background: #eee; }
 .newusers .userthumb { width: 35px; display: block; float: left; margin-right: 10px; }
 .newusers strong { display: block; line-height: normal; }
 .newusers small { color: #999; line-height: normal; }
