Add missing title for admin/position view.

--- a/app/views/admin/admin/position.html.erb
+++ b/app/views/admin/admin/position.html.erb
@@ -14,6 +14,7 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
+    <h3 class="subtitle">Position</h3>
     <div class="divider15"></div>
     <div class="widgetbox">
       <div class="headtitle">
