Implement user show view. Remove unneeded views.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -56,7 +56,7 @@
     <h3 class="subtitle">about the teacher</h3>
     <div class="well about-teacher">
       <%= image_tag user_avatar_path(@course.teacher, :normal), :class => "pull-left" %>
-      <div class="teacher-info"
+      <div class="teacher-info">
         <h4><%= link_to @course.teacher.name, user_path(@course.teacher) %></h4>
         <p>No teacher introdution yet</p>
       </div>
