--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-info-box {
+  //background-color: #fff;
+
+  img {
+    width: 80px;
+  }
+
+  .user-info {
+    margin-left: 100px;
+
+    ul.info-details {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }    
+  } 
+}
+
+.user-manager {
+  img { width: 40px; }
+}
+
+.user-subordinates, .user-follower, .user-following {
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    li {
+      display: inline;
+      margin-right: 5px;
+      img { width: 40px; }
+    }
+  }
+}
